@@ -144,6 +144,7 @@ allprojects {
       }
       //CVE-2017-18640
       dependency group: 'org.yaml',name: 'snakeyaml', version: '1.30'
+
     }
   }
 }
@@ -270,6 +271,7 @@ dependencies {
   implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: versions.ccdCaseDocumentAmClient
 
   compile group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '2.2.0'
+  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
 
   implementation group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
@@ -378,6 +380,14 @@ dependencies {
   contractTestCompile sourceSets.test.runtimeClasspath
 
   integrationTestImplementation(sourceSets.test.output)
+
+  testCompile 'com.github.hmcts:fortify-client:1.2.2:all'
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
